# lul

./: .gitignore  CHANGELOG.md  flake.nix  lul.cabal  readme.md
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.5/: lul-0.1.0.0-inplace.conf  package.cache
src/: Debug.hs  Lul.hs  Main.hs  Path.hs  StackSet.hs  Tree.hs  TreeData.hs  WindowDecoration.hs
test/: lul-test.py
