cabal-version:      3.0
name:               lul
version:            0.1.0.0
synopsis:           A simple, quick and small window-manager

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Luca Leon Happel
maintainer:

-- A copyright notice.
-- copyright:
category:           System
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Lul

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.2.0,
                      X11 ^>= 1.10
    hs-source-dirs:   src
    default-language: Haskell2010

executable lul
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.2.0,
        X11 ^>= 1.10,
        process ^>= 1.6.11.0,
        lul

    ghc-options: -threaded
    hs-source-dirs:   app
    default-language: Haskell2010
